document splitting and embedding setup

--- a/src/notebooks/Intro.ipynb
+++ b/src/notebooks/Intro.ipynb
@@ -36,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conda create -n aiproject python=3.12"
+    "conda create -n aiproject python=3.12\n",
+    "\n",
+    "pip install -U langchain-community langchain pymupdf4llm"
    ]
   }
  ],
