removing the keys

--- a/src/notebooks/pdf_parsing.ipynb
+++ b/src/notebooks/pdf_parsing.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "008917b9",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
     "\n",
     "file_path = pdf_path \n",
     "endpoint = \"https://test-vidvatta.cognitiveservices.azure.com/\"\n",
-    "key = \"5301668c9a4c406097694ace1da1e6b1\"\n",
+    "key = \"<key>\"\n",
     "\n",
     "loader = AzureAIDocumentIntelligenceLoader(\n",
     "    api_endpoint=endpoint, api_key=key, file_path=file_path, api_model=\"prebuilt-layout\"\n",
@@ -1236,7 +1236,7 @@
     "\n",
     "os.environ['AZURE_OPENAI_ENDPOINT'] = 'https://rushi-m9xyt0et-eastus2.cognitiveservices.azure.com/'\n",
     "os.environ['AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME']='text-embedding-3-large'\n",
-    "os.environ['AZURE_OPENAI_API_KEY']='02oCvRekc2bvzlYWHVhKHNGEyxcMyHyBblbGPD3AMVlslt1XWPfHJQQJ99BDACHYHv6XJ3w3AAAAACOGXc0e'\n",
+    "os.environ['AZURE_OPENAI_API_KEY']='<key>'\n",
     "os.environ['AZURE_OPENAI_API_VERSION']=\"2024-02-01\"\n",
     "\n",
     "\n",
