update endpoint and API key placeholders in pdf_parsing notebook

--- a/src/notebooks/pdf_parsing.ipynb
+++ b/src/notebooks/pdf_parsing.ipynb
@@ -681,7 +681,7 @@
     "from langchain_community.document_loaders import AzureAIDocumentIntelligenceLoader\n",
     "\n",
     "file_path = pdf_path \n",
-    "endpoint = \"https://test-vidvatta.cognitiveservices.azure.com/\"\n",
+    "endpoint = \"<endpoint>\"\n",
     "key = \"<key>\"\n",
     "\n",
     "loader = AzureAIDocumentIntelligenceLoader(\n",
@@ -1234,7 +1234,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ['AZURE_OPENAI_ENDPOINT'] = 'https://rushi-m9xyt0et-eastus2.cognitiveservices.azure.com/'\n",
+    "os.environ['AZURE_OPENAI_ENDPOINT'] = '<endpoint>'\n",
     "os.environ['AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME']='text-embedding-3-large'\n",
     "os.environ['AZURE_OPENAI_API_KEY']='<key>'\n",
     "os.environ['AZURE_OPENAI_API_VERSION']=\"2024-02-01\"\n",
