Refactor code structure for improved readability and maintainability

--- a/src/notebooks/Intro.ipynb
+++ b/src/notebooks/Intro.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Conda environment / uv\n",
     "# Opik / langSmith (opensource)\n",
-    "# PDF parsing / pypdf / azure ai document intelligence / aws textract / gcp document ai\n",
+    "# PDF parsing / pypdf /pymupdf / docling / azure ai document intelligence / aws textract / gcp document ai / mixtral (document understanding model)\n",
     "# Load into vector db\n",
     "# Create evals for both agents\n",
     "# Build the agents (db agent, rag agent, supervisor agent)\n",
