--- a/src/notebooks/db_agent.ipynb
+++ b/src/notebooks/db_agent.ipynb
@@ -206,6 +206,30 @@
     "    'messages': ['list all the return order reasons']\n",
     "})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00af2c8b",
+   "metadata": {},
+   "source": [
+    "## Human In The Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c65ec4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75c23ea8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
